--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev":  "env-cmd ./config/dev.env nodemon src/server.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.12",
