--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "env-cmd ./config/dev.env nodemon src/server.js",
-    "test": "mocha -r ts-node/register ./tests/**/*.ts --exit",
+    "test": "mocha tests/*.js --exit",
     "test:coverage": "rimraf .nyc_output && nyc npm run test"
   },
   "author": "",
